[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proxera"
version = "0.1.0"
description = "Drop-in OpenAI SDK replacement that routes through Proxera"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Proxera" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["openai>=1.0"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://proxera.dev"
Documentation = "https://docs.proxera.dev"
Repository = "https://github.com/proxera/proxera"

[tool.hatch.build.targets.wheel]
packages = ["src/proxera"]

[tool.ruff]
target-version = "py39"
line-length = 100
